@@ -47,7 +47,7 @@ uint8_t CommandInfo::minArgumentsCount() const {
 CommandHolder::CommandHolder(const std::string& name, const std::string& params,
                              const std::string& summary, uint32_t since,
                              const std::string& example, uint8_t required_arguments_count,
-                             uint8_t optional_arguments_count, function_type func)
+                             uint8_t optional_arguments_count, function_t func)
   : CommandInfo(name, params, summary, since, example,
                 required_arguments_count, optional_arguments_count), func_(func){
 }
