@@ -37,7 +37,8 @@ namespace core {
 struct CommandInfo {
   CommandInfo(const std::string& name, const std::string& params,
               const std::string& summary, uint32_t since,
-              const std::string& example, uint8_t required_arguments_count,
+              const std::string& example,
+              uint8_t required_arguments_count,
               uint8_t optional_arguments_count);
 
   uint16_t maxArgumentsCount() const;
@@ -57,17 +58,17 @@ class CommandHandler;
 class CommandHolder
     : public CommandInfo {
  public:
-  typedef std::function<common::Error(CommandHandler*, int, char**, FastoObject*)> function_type;
+  typedef std::function<common::Error(CommandHandler*, int, char**, FastoObject*)> function_t;
 
   CommandHolder(const std::string& name, const std::string& params,
                 const std::string& summary, uint32_t since,
                 const std::string& example, uint8_t required_arguments_count,
-                uint8_t optional_arguments_count, function_type func);
+                uint8_t optional_arguments_count, function_t func);
   bool isCommand(const std::string& cmd);
   common::Error execute(CommandHandler* handler, int argc, char** argv, FastoObject* out) WARN_UNUSED_RESULT;
 
  private:
-  const function_type func_;
+  const function_t func_;
 };
 
 class CommandHandler {
