@@ -2,6 +2,7 @@
 [Alexandr Topilski]
 - [Redis] Commands update
 - [SSDB] Up sources to version 1.9.3
+- [SSDB] DBKCOUNT command
 - [RocksDB] Up sources to version 4.8.0
 
 0.6.2 / May 7, 2016
